swagger添加未完成

--- a/Richard.Core.Api/Richard.Core.Api.csproj
+++ b/Richard.Core.Api/Richard.Core.Api.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\UserAccountLuLiFa\NetCore\Richard.Core\Richard.Core.Api\Richard.Core.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
 
 </Project>
