--- a/Richard.Core.Middleware/Richard.Core.Middleware.csproj
+++ b/Richard.Core.Middleware/Richard.Core.Middleware.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Richard.Core.Common\Richard.Core.Common.csproj" />
+    <ProjectReference Include="..\Richard.Core.Setup\Richard.Core.Setup.csproj" />
+  </ItemGroup>
+
 </Project>
