--- a/Richard.Core.Setup/Richard.Core.Setup.csproj
+++ b/Richard.Core.Setup/Richard.Core.Setup.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-preview.7.20364.11" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Richard.Core.Common\Richard.Core.Common.csproj" />
+  </ItemGroup>
+
 </Project>
